--- a/calender.css
+++ b/calender.css
@@ -2,14 +2,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
     background: #9B59B6;
     font-family: 'Poppins', sans-serif;
     flex-direction: column
 }
 #mainHead{
-    margin: 50px 0px;
-    font-size: 60px;
+    margin: 20px 0px;
+    font-size: 50px;
     color: white;
 }
 .calenderWrapper {
@@ -17,7 +16,7 @@ body {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 350px;
+    width: 90%;
     text-align: center;
 
 }
@@ -50,30 +49,40 @@ body {
     font-weight: bold;
     padding: 0;
     margin: 10px 0;
+    /* justify-items: center; */
+}
+.weekDays li{
+    width: 60px;
+
 }
 
 .days {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding:0;
+    /* justify-items: center; */
 }
 
 .days li {
-    padding: 15px;
+    padding: 20px ;
+    width: 60px;
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
-    border-radius: 50%;
+    border-radius: 100%;
+
 }
 
 .days li:hover {
     background: #ddd;
 }
 
-.days li.current-day {
+.days li.active {
     background: #9B59B6;
     color: white;
     font-weight: bold;
+}
+.days li.inactive {
+    color: #877979;
 }
