--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: rgb(81, 77, 77);
+    box-sizing: border-box;
 }
 
 #moodLogs{
@@ -13,15 +13,15 @@
 }
 #heading{
     text-align: center;
-    margin-block: 50px ;
+    margin-block: 20px ;
     font-size: 50px;
+    color: white;
 }
 .moodEmojis{
     display: flex;
     gap: 50px;
     justify-content: center;
-    /* height: 50vh; */
-    margin: 100px;
+    margin: 20px;
 }
 .emojis{
     width: 100px;
