--- a/calender.css
+++ b/calender.css
@@ -6,83 +6,43 @@ body {
     font-family: 'Poppins', sans-serif;
     flex-direction: column
 }
-#mainHead{
-    margin: 20px 0px;
-    font-size: 50px;
-    color: white;
-}
-.calenderWrapper {
-    background: #fff;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+
+.calenderWrapper{
     width: 90%;
+    margin-block:40px;
+}
+.months{
+    display: flex;
+    justify-content: space-between;
+}
+.currentDate{
+    font-size: 50px;
+
+}
+.icons span{
+    font-size: 50px;
+    cursor: pointer;
+}
+.calender{
+    width :100%;
+}
+.weekDays{
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
     text-align: center;
 
 }
-
-.months {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.icons span {
-    cursor: pointer;
-    font-size: 20px;
-    padding: 5px 10px;
-    transition: 0.3s;
-}
-
-.icons span:hover {
-    color: #9B59B6;
-}
-
-
-.weekDays {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    list-style: none;
-    color: #333;
-    font-weight: bold;
-    padding: 0;
-    margin: 10px 0;
-    /* justify-items: center; */
-}
 .weekDays li{
-    width: 60px;
-
-}
-
-.days {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    border: 1px solid white;
+    font-size: 25px;
     list-style: none;
-    padding:0;
-    /* justify-items: center; */
 }
-
-.days li {
-    padding: 20px ;
-    width: 60px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 100%;
-
+.days{
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(6,100px);
 }
-
-.days li:hover {
-    background: #ddd;
-}
-
-.days li.active {
-    background: #9B59B6;
-    color: white;
-    font-weight: bold;
-}
-.days li.inactive {
-    color: #877979;
+.days li{
+    border: 1px solid white;
+    list-style: none;
 }
