--- a/calender.css
+++ b/calender.css
@@ -1,50 +1,75 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #9B59B6;
-    font-family: 'Poppins', sans-serif;
-    flex-direction: column
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #9b59b6;
+  font-family: "Poppins", sans-serif;
+  flex-direction: column;
 }
 
-.calenderWrapper{
-    width: 90%;
-    margin-block:40px;
-    display: none;
+.calenderWrapper {
+  padding: 20px 30px;
+  background-color: #ffffff;
+  width: 90%;
+  margin-block: 40px;
+  display: none;
+  border-radius: 10px;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+}
+.months {
+  display: flex;
+  justify-content: space-between;
+}
+.currentDate {
+  font-size: 36px;
+}
+.icons span {
+  font-size: 50px;
+  cursor: pointer;
+  color: #878787;
+}
+.icons span:hover {
+  color: #9b59b6;
+}
+.calender {
+  width: 100%;
+}
 
+.weekDays {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
 }
-.months{
-    display: flex;
-    justify-content: space-between;
+.weekDays li {
+  border: 1px solid black;
+  font-size: 25px;
+  list-style: none;
 }
-.currentDate{
-    font-size: 50px;
+.days {
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 100px);
+}
+.days li {
+  font-size: 20px;
+  list-style: none;
+  padding: 10px; /*Added padding*/
+  transition: background-color 0.2s ease;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+.days li.inactive {
+  color: #aaa;
+}
+.days li.active {
+  color: #f51515;
+}
 
+.days li:hover {
+  background-color: #9b59b6;
+  color: white;
 }
-.icons span{
-    font-size: 50px;
-    cursor: pointer;
-}
-.calender{
-    width :100%;
-}
-.weekDays{
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-    text-align: center;
-
-}
-.weekDays li{
-    border: 1px solid white;
-    font-size: 25px;
-    list-style: none;
-}
-.days{
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-    grid-template-rows: repeat(6,100px);
-}
-.days li{
-    border: 1px solid white;
-    list-style: none;
+.days li.active:hover {
+  background-color: royalblue;
 }
