--- a/calender.css
+++ b/calender.css
@@ -27,6 +27,9 @@ body {
   font-size: 50px;
   cursor: pointer;
   color: #878787;
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
 }
 .icons span:hover {
   color: #9b59b6;
@@ -52,7 +55,10 @@ body {
   grid-template-rows: repeat(6, 100px);
 }
 .days li {
-  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
   list-style: none;
   padding: 10px; /*Added padding*/
   transition: background-color 0.2s ease;
@@ -61,8 +67,13 @@ body {
 }
 .days li.inactive {
   color: #aaa;
+  display: flex;
+  align-items: center;  
+
 }
 .days li.active {
+  display: flex;
+  align-items: center;
   color: #f51515;
 }
 
