--- a/calender.css
+++ b/calender.css
@@ -66,11 +66,16 @@ body {
   transition: background-color 0.2s ease;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    flex-wrap: wrap;
+  gap: 5px;
+    
 }
 .days li.inactive {
   color: #aaa;
   display: flex;
   align-items: center;  
+  flex-wrap: wrap;
+
   gap: 5px;
 
 }
